compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__internal_values_from_a_dependency_are_ignored.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: import dep
---
import dep

----- Completion content -----
[]
